--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,7 @@ body {
 }
 
 .wallet-button {
-  border-color: rgba(54, 54, 55, 1) !important;
+  border-color: #363637 !important;
   background: rgba(161, 103, 254, 0.09) !important;
 }
 
@@ -89,15 +89,25 @@ input[type=number] {
   border-image-source: linear-gradient(180deg, #8B2DC5 0%, rgba(26, 5, 39, 0.92) 100%);
 }
 
-.vertical-border-sm {
-  border-image-slice: 1;
-  border-top: 0;
-  border-right: 0;
-  border-left: 0;
-  border-width: 2px;
-  border-image-source: linear-gradient(180deg, #8B2DC5 0%, rgba(26, 5, 39, 0.92) 100%);
-}
-
 .card {
   background: linear-gradient(241deg, rgba(112, 24, 255, 0.20) 3.03%, rgba(48, 45, 54, 0.17) 67.92%);
+}
+
+.mobile-menu {
+  border-radius: 0px 25px 25px 0px;
+  background:  rgb(5 2 7);
+}
+
+.mobile-menu:after {
+  content: ' ';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(73, 73, 73, 0.09);
+  border-radius: 0px 25px 25px 0px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: -1;
 }
